testdata/baselines/reference/compiler/cjsModuleExportsReexportPanic.errors.txt
/test.cjs(2,1): error TS4023: Exported variable 'extpkg' has or is using name 'ExtPkg' from external module "/node_modules/@types/extpkg/index" but cannot be named.


==== /node_modules/@types/dep/index.d.ts (0 errors) ====
    declare namespace dep {
        interface Options {
            expand?: (str: string) => string;
        }
    }
    declare function dep(pattern: string, options?: dep.Options): string[];
    export = dep;
    
==== /node_modules/@types/dep/package.json (0 errors) ====
    { "name": "@types/dep", "version": "1.0.0" }
    
==== /node_modules/@types/extpkg/index.d.ts (0 errors) ====
    import dep = require("dep");
    declare namespace extpkg {
        interface Options {
            pattern: string;
        }
    }
    interface ExtPkg {
        (list: readonly string[], patterns: string | readonly string[], options?: extpkg.Options): string[];
        dep(pattern: string, options?: dep.Options): string[];
    }
    declare const extpkg: ExtPkg;
    export = extpkg;
    
==== /node_modules/@types/extpkg/package.json (0 errors) ====
    { "name": "@types/extpkg", "version": "1.0.0" }
    
==== /test.cjs (1 errors) ====
    /** @type {typeof import("extpkg") | undefined} */
    let extpkg;
    ~~~
!!! error TS4023: Exported variable 'extpkg' has or is using name 'ExtPkg' from external module "/node_modules/@types/extpkg/index" but cannot be named.
    
    module.exports.extpkg = extpkg;
    